# agentic-workflow

./: .coverage  .flake8  .gitattributes  .gitignore  .gitkeep  .pre-commit-config.yaml  CLEANUP_SUMMARY.md  CMakeLists.txt  CORE_INFRASTRUCTURE_SUMMARY.md  DOCUMENTATION_AND_RELEASE_SUMMARY.md  DOCUMENTATION_IMPROVEMENT_SUMMARY.md  DUPLICATE_DOCS_FOLDERS_CLEANUP.md  DUPLICATE_FOLDER_CLEANUP_SUMMARY.md  FINAL_SYSTEM_STATUS.md  IMPLEMENTATION_SUMMARY.md  MCP_SELF_IMPROVEMENT_COMPLETE.md  MEMORY_INTEGRATION_COMPLETE.md  MMCP_COMPREHENSIVE_ENHANCEMENT_SUMMARY.md  MMCP_INTEGRATION_DEMO.md  OBSIDIAN_DOCUMENTATION_UPGRADE_COMPLETE.md  OBSIDIAN_GRAPH_VIEW_TROUBLESHOOTING.md  P2P_INTEGRATION_SUMMARY.md  PFSUS_COMPLIANCE_UPDATE_SUMMARY.md  PFSUS_COMPREHENSIVE_UPDATE_SUMMARY.md  PFSUS_ENGLISH_SHORTHAND_GUIDE.md  PFSUS_FORMAT_WRAPPING_UPDATE_SUMMARY.md  PFSUS_STANDARDS_ENFORCEMENT_SUMMARY.md  PRODUCTION_READINESS_CHECKLIST.md  PROJECT_REORGANIZATION_SUMMARY.md  README.md  TASK_COMPLETION_SUMMARY.md  TODO_BACKUP.txt  TODO_DEVELOPMENT_PLAN.md  UPGRADE_PROGRESS_SUMMARY.md  WEB_ENGINE_IMPLEMENTATION_SUMMARY.md  assistant_comprehensive_guide.md  assistant_internal_rules.md  automation_secrets.env  buildozer.spec  demo_web_social_engine.py  (+89 more)
.github/workflows/: pfsus-compliance.yml
.kiro/hooks/: code-quality-pfsus-monitor.kiro.hook  source-docs-sync.kiro.hook
agentic-workflow/docs/: epigenetic_memory.md  genetic_codon_encoding.md  genetic_expression_architecture.md  genetic_performance_benchmarking.md  genetic_trigger_system.md  hormone_system.md  p2p_status_visualization.md  split_brain_testing.md
config/: vscode-settings.json
core/: AGENT.Specification.v1.1.0.mmcp.mmd  CORE_SYSTEM_GUIDE.md  MCP-System-Mind-Map.mmd  MerMaidContextProtocol.version-1.0.0.0.mmcp.mmd  PFSUS.MMCP-Regex.MMCP.MMD  PROJECT_STRUCTURE.md  README.md  cli.py  pretrain_neural_networks.py  project-todo.mmd  setup_core.py  stdio_server.py  system_health_check.py
core/ARCH/: Core-Architecture-Full-Detail.MMCP.v1.0.0.sequence.mmd
core/PFSUS/: .lambda.operators.mmcp.old.kate-swp  Lambda-Super-Reff.MMCP.lamda.sequence.v1.0.0.mmd  Lambda-Super-Reff.lamda.sequence.v1.0.0.mmd  PFSUS.MMCP-Address.Standard.v2.0.0.mmcp.mmd  PFSUS.MMCP-Adress.Standard.v1.1.0.mmcp.mdd  PFSUS.MMCP-AgentQA-Reference.Standard.v2.0.0.mmcp.mmd  PFSUS.MMCP-FormatWrapping.Standard.v1.4.0.mmcp.mmd  PFSUS.MMCP-FormatWrapping.Standard.v2.0.0.mmcp.mmd  PFSUS.MMCP-Legend.Standard.v1.1.0.mmcp.mdd  PFSUS.MMCP-Metaversioning.Standard.v1.1.0.mmcp.mmd  PFSUS.MMCP-Minimal.Ref.v1.1.0.mmcp.mmd  PFSUS.MMCP-ReadWriteDiff.Guide.v1.1.0.mmcp.mdd  PFSUS.MMCP-Regex.Standard.v1.1.0.mmcp.mmd  PFSUS.MMCP-Strategy.Guide.v1.2.0.mmcp.mmd  PFSUS.MerMaidContextProtocol.Standard.v1.2.0.mmcp.mmd  labda.bianary.mmcp.old  lambda.operators.mmcp.enhanced  lambda.operators.mmcp.old
core/SELF_REPAIR/: README.md  SELF_REPAIR.Lambda.Agent.QA-Reference.v2.0.0.mmcp.mmd
core/tests/: __init__.py  conftest.py  test_core_system.py  test_database_manager.py  test_p2p_cognitive_integration.py  test_p2p_integration.py  test_p2p_integration_pytest.py  test_p2p_pytest.py
data/: advanced_engram.db  alignment_engine.db  dreaming_engine.db  engram_engine.db  genetic_exchange.db  hypothetical_engine.db  multillm_orchestrator.db  pattern_recognition.db  pattern_recognition_enhanced.db  physics_engine.db  rag_system.db  scientific_engine.db  scientific_process.db  short_term_memory.db  simulated_reality.db  splitbrain_abtest.db  tasks.db  test.db  unified_memory.db  vector_memory.db  vectors.db  workflow.db
data/config/: core_config.json
deployment_packages/: PORTABLE_ARCHIVE_README.md  create_deployment_package.py  create_portable_archive.py  deploy_portable.py
docs/: ADVANCED_API.md  API_DOCUMENTATION.md  ARCHITECTURE.md  CLI-Commands.md  CLI_USAGE.md  DEVELOPER_GUIDE.md  Documentation-Index.md  Documentation-Summary.md  ENHANCED_MCP_SYSTEM.md  EXAMPLES.md  FAQ.md  IMPLEMENTATION_STATUS.md  LOBE_ALTERNATIVES.md  Memory-System.md  Production-Deployment.md  QA_SECURITY_DEPLOYMENT.md  README.md  SELF_IMPROVING_NEURAL_SYSTEM.md  Troubleshooting.md  USER_GUIDE.md
docs/.obsidian/: community-plugins.json  workspace.json
docs/canonical/: MCP-System-Mind-Map-Guide.md  README.md
docs/cli/: CLI-Quick-Reference.md  README.md
docs/development/: Brain-Inspired-Patterns.md  Core-Architecture.md  Development-Setup.md  README.md
examples/: hormone_system_example.py
frontend/: INTEGRATION.md  README.md  package.json  tailwind.config.js  vite.config.ts
frontend/public/: index.html
frontend/src/: App.tsx  index.css
mcp_deployment_package/: README.md  quick_start.sh  unwrap.bat  unwrap.sh
plugins/example_plugin/: __init__.py  plugin.py  plugin.yaml
releases/: RELEASE_NOTES_v1.0.0.md  SHA256SUMS_v1.0.0.txt  create_github_release.sh  github_release_config.json
reports/: performance_report_2025-07-19T22-14-04.780008.json  performance_report_2025-07-19T22-14-07.519916.json  performance_report_2025-07-19T22-14-10.195309.json  performance_report_2025-07-19T22-14-12.890967.json  performance_report_2025-07-19T22-14-15.563882.json  performance_report_2025-07-19T22-14-18.216814.json  performance_report_2025-07-19T22-14-20.820027.json  performance_report_2025-07-19T22-14-23.422002.json  performance_report_2025-07-19T22-14-26.063922.json  performance_report_2025-07-19T22-14-28.678075.json  performance_report_2025-07-19T22-14-31.198566.json  performance_report_2025-07-19T22-14-33.927676.json  performance_report_2025-07-19T22-14-36.458388.json  performance_report_2025-07-19T22-14-38.983710.json
scripts/: automated_distribution.py  automation.py  bootstrap_venv.sh  build_android.py  build_packages.py  build_portable.py  cleanup_docs.py  complete_documentation.py  demo_self_improving_neural_system.py  finalize_documentation.py  help_system.py  project_audit.py  security_audit.py  setup.py  setup_wizard.py  simple_self_improvement_demo.py  universal_package_builder.py  upgrade_documentation.py  verify_environment.py  vscode_integration_setup.py
src/: llm_api.py
tests/: test_self_improving_neural_system.py
(+482 files in other folders)
